--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,9 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+
+.theme-doc-markdown img {
+  max-width: 600px;
+  aspect-ratio: 16 / 9;
+}
