--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,6 +31,10 @@
 
 
 .theme-doc-markdown img {
-  max-width: 600px;
+  max-width: 500px;
   aspect-ratio: 16 / 9;
+
+  @media only screen and (max-width: 576px) {
+    max-width: 100%;
+  }
 }
